compiler/src/test/resources/amyc/typer/failing/FunctionCalls3.amy
module FunctionCall
  fn foo(i: Int, b: Boolean): Boolean = { i < 0 }
  
  foo(true, 1)
end FunctionCall
